--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="container">
             <h1>John Doe</h1>
             <p>Full Stack Developer</p>
+            <button id="theme-toggle">Toggle Dark Mode</button>
         </div>
     </header>
     
@@ -58,7 +59,6 @@
                 <h3>Project 2</h3>
                 <p>Description of Project 2.</p>
             </div>
-            <!-- Add more projects as needed -->
         </div>
     </section>
     
@@ -75,5 +75,7 @@
             <p>&copy; 2024 John Doe</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
