--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 
       <!-- Optional Visual -->
       <div class="hero-image">
-        <img src="your-image.png" alt="Your Illustration or Photo" />
+        <img src="https://plus.unsplash.com/premium_photo-1689530775582-83b8abdb5020?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Your Illustration or Photo" />
       </div>
     </section>
 
